# Drone-MOB

./: .gitignore  README.md  dockerfile  pyproject.toml  readme.txt  requirements.txt
coordinator/: coordinator.py  coordinator_main.py  gcs_server.py  media_server.py  prob_search.py
drone/: analyse_logs.py  main.py  test_architecture.py
drone/config/: mission_config.yaml
drone/core/: config_models.py  drone.py  logger.py  mission.py  navigation.py  position.py  safety.py  state_machine.py
drone/core/ai/: prob_search.py
drone/core/cameras/thermal/: simulated.py
drone/core/cameras/visual/: simulated.py
drone/core/detection/: fusion_detector.py  thermal_detector.py  thermal_detector_v2.py  visual_detector.py
drone/strategies/: __init__.py  base.py
drone/strategies/flight/: direct.py  orbit.py  precision_hover.py
drone/strategies/search/: random.py  vertical_ascent.py
hub/: hub_main.py  satellite_relay.py
recordings/: thermal_20251027_135332.avi  thermal_20251027_141135.avi  thermal_20251028_084407.avi  thermal_20251029_152036.avi  thermal_20251030_130153.avi  thermal_20251030_130210.avi  thermal_20251030_184620.avi  visual_20251027_135332.avi  visual_20251027_141135.avi  visual_20251028_084407.avi  visual_20251029_152036.avi  visual_20251030_130153.avi  visual_20251030_130210.avi  visual_20251030_184620.avi
v_0.1/src/: __init__.py  main.py
v_0.1/src/core/: __init__.py  mission.py  state_machine.py
v_0.1/src/detection/: __init__.py  classifier.py  thermal_processing.py
v_0.1/src/hardware/: __init__.py  flight_controller.py  led_controller.py  thermal_camera.py
v_0.1/src/utils/: __init__.py  geometry.py
v_0.1/tests/: __init__.py  test_classifier.py
v_0.2/scout_drone/: main.py  test_architecture.py
v_0.2/scout_drone/config/: mission_config.yaml  mission_config2.yaml
v_0.2/scout_drone/core/: behaviors.py  camera.py  comms.py  config_models.py  drone.py  gcs_frontend.html  gcs_server.py  logger.py  mission.py  navigation.py  position.py  safety.py  state_machine.py  telemetry_logger.py
v_0.2/scout_drone/core/cameras/: base.py  dual_camera.py
v_0.2/scout_drone/core/cameras/thermal/: simulated.py
v_0.2/scout_drone/core/detection/: fusion_detector.py  tracker.py
v_0.2/scout_drone/core/recording/: video_recorder.py
v_0.2/scout_drone/strategies/: __init__.py
v_0.2/scout_drone/strategies/flight/: direct.py  precision_hover.py  straight.py
v_0.2/scout_drone/strategies/search/: lawnmower.py  random.py  vertical_ascent.py
(+1 files in other folders)
