[tool.poetry]
name = "drone-mob"
version = "0.2.0"
description = "Autonomous Man Overboard (MOB) detection and rescue drone system."
authors = ["Your Name <you@example.com>"] # TODO: Update author
readme = "README.md"
license = "MIT" # TODO: Update or add a license
repository = "https://github.com/theogodfrey/drone-mob" # TODO: Update repository URL

[tool.poetry.dependencies]
python = "^3.9" # Assumed from modern syntax (asyncio, pydantic)

# Original dependencies from requirements.txt
pyyaml = ">=6.0"
numpy = ">=1.21.0"
scipy = ">=1.7.0"
opencv-python = ">=4.5.0"

# Dependencies added during refactoring
pydantic = ">=2.0"
transitions = {version = ">=0.9.0", extras = ["async"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"