[tool.poetry]
name = "drone-mob"
version = "0.2.0"
description = "Autonomous Man Overboard (MOB) detection and rescue drone system." [cite: theogodfrey/drone-mob/Drone-MOB-b1dc697ef87662d03073acc69aeb5ba496501525/README.md]
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/theogodfrey/drone-mob"

[tool.poetry.dependencies]
python = "^3.9"

# Original dependencies
pyyaml = ">=6.0"
numpy = ">=1.21.0"
scipy = ">=1.7.0"
opencv-python = ">=4.5.0"

# Added during refactoring
pydantic = ">=2.0"
transitions = {version = ">=0.9.0", extras = ["async"]}

# NEW: Added for GCS and Navigation
websockets = ">=12.0"
numpy = ">=1.21.0" # numpy was already present, but explicitly needed for nav

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
